- 
    Bug 
- 
    Resolution: Done
- 
     Not Evaluated Not Evaluated
- 
    5.0.0
- 
    Windows 7
- 
        5e6b167feaa38a51ce8d4b0b3d61872f7b3f33dc,8eccd45958eb698c628c8771beef3c975b5ffb43
ActiveQt created controls display double frame when used in QAxWidget, when it should display no frame. It seems that the window is first drawn to expected location, and then it gets shifted another frame's worth again. The same control displays correctly without frame in web browser if embedded into a html page.
Forcing the QWindow frameless on the control side gets rid of the frame, but doesn't get rid of the extra frame's offset. Also, this might be undesirable in cases where the control wants to display a frame (I don't know if that is ever the case in real world, though). Since a web browser can display the control correctly, the problem is probably on the container side anyway.
Needs more investigation.
- is required for
- 
                    QTBUG-24209 Qt 5.0 - Windows: Fix the QtActiveQt module -         
- Closed
 
-         
| For Gerrit Dashboard: QTBUG-25808 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 27982,2 | Windows: Fix window positioning for ActiveQt servers | master | qt/qtbase | Status: MERGED | +2 | 0 | 
| 27987,2 | Fix embedded ActiveQt server window positioning | master | qt/qtactiveqt | Status: MERGED | +2 | 0 |